--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/images/appIcon/appIcon.png" type="image/x-icon" />
+    <link rel="icon" href="/appIcon/ArcanumMusic.png" type="image/x-icon" />
     <title>Arcanum Music</title>
   </head>
   <body>
